more fixes for the semantic viewer, comments on strange persona design, new launcher class that bypasses JavaFX nonsense with modular java.